# basic-3D-scanner

./: .gitignore  CMakeLists.txt  PCDIO.h  PCLOperations.h  README.md  cse-395-g7-ui.pro  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motordriver.cpp  motordriver.h  params.json  resources.qrc  rs232.c  rs232.h  types.h
arduino/: motor_stepper.ino
arduino/motor_stepper/: motor_stepper.ino
stylesheets/: stylesheet.css
ui/cse-395-g7-ui/: .gitignore
